# sidekick

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
sidekick/: chat.py  discord.py  feedback_commands.py  feedback_slash_commands.py  help_command.py  ppo_trainer.py  rl.py  rl_pipeline.py  rl_pipeline_ppo.py
